--- a/css/assignment.css
+++ b/css/assignment.css
@@ -6,25 +6,18 @@
     flex-direction: row;
     text-align: center;
     color: black;
-    text-decoration: none;
     margin-left: auto;
     margin-right: auto;
     justify-content: space-evenly;
     padding-top: 20px;
     padding-bottom: 20px;
 }
-
-a{
-    text-decoration: none;
-    color: white;
-    text-align: right, center;
-}
-
 .main{
     padding-top: 20px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    max-width: 300px;
 }
 .flex{
     margin-left: auto;
@@ -35,28 +28,20 @@ a{
     text-align: center;
 }
 
+.register{
+    margin-bottom: 300px;
+    display: inline-block;
+    border: solid;
+    color: white;
+    text-decoration: none;
+
+}
 img{
     max-width: 300px;
     max-height: 250px;
 }
-
 footer{
     background-color: gray;
-    padding: 30px;
+    padding: 50px;
 }
 
-.form-container{
-
-}
-.button1{
-    border-radius: 20%;
-    background-color: darkgray;
-    text-size-adjust: 20px;
-    color: black;
-    margin-bottom: 50px;
-}
-
-.wrap{
-    text-align: center;
-    text-wrap: 50px;
-}
