--- a/css/assignment.css
+++ b/css/assignment.css
@@ -12,13 +12,16 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
-.main{
-    padding-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    max-width: 300px;
+
+.error{
+    background-color: rgb(251, 174, 174);
+    border: 1px solid red;
 }
+
+.hide{
+    display: none;
+}
+
 .flex{
     margin-left: auto;
     margin-right: auto;
@@ -44,4 +47,3 @@ footer{
     background-color: gray;
     padding: 50px;
 }
-
